--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1080,6 +1080,9 @@
     <!-- If a dock provides a lid switch, that lid can be removed. This setting is used to determine' whether lidOpenRotation has to be applied. -->
     <bool name="config_hasRemovableLid">false</bool>
 
+     <!-- Disable the home key unlock setting -->
+    <bool name="config_disableHomeUnlockSetting">true</bool>
+
     <!-- Hardware 'face' keys present on the device, stored as a bit field.
          This integer should equal the sum of the corresponding value for each
          of the following keys present:
